<resources>
    <string name="app_name">Twic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sentence_default">sentence to translate</string>
    <string name="Title">Twic on Android</string>
    <string name="viewLangSrc">From:</string>
    <string name="viewLangDst">To:</string>
    <string name="sendButton">send</string>
    <string name="responseView">Response</string>
    <string name="wordPositionLabel">Word start position</string>
    <string name="wordPositionView">0</string>
    <string name="connexionError">Connexion error: Please enable your Wifi connexion</string>
    <string name="serverError">Server error: Unable to reach Twic server</string>
    <string name="shareError">Share Error: unable to process data</string>
    <string name="soundError">Sound Error: unable to play sound</string>
    <string name="buttonPrev">Previous</string>
    <string name="buttonNext">Next</string>
    <string name="speakerSrc">speakerSrc</string>
    <string name="speakerDst">speakerDst</string>
    <string name="translate">Translate</string>

    <string name="initTxt">Une petite bière ça te dis ?</string>
    <string name="baseForm">Base form</string>
    <string name="baseFormTitle">Base form</string>
    <string name="translationsTitle">Translations</string>
    <string name="collocationSrcTitle">Collocation source</string>
    <string name="collocationDstTitle">Collocation destination</string>
    <string name="infoTitle">Twic Kindle Application</string>
    <string name="infoMainLabel">TWiC (Translation of Words in Context) is an android application that provides terminological assistance for readers of foreign language documents.\nIt interacts with the LATL server to analyze the source text and display context-dependent translations.</string>
    <string name="infoCredits">Created by:\n\tAdrien Python\n\tThomas Bertrand\nLATL, Université de Genève http://www.latl.unige.ch</string>
    <string name="infoVersion">Version: 1.0</string>
    <string name="infoLogo">unigeLogo</string>
    <string name="itsTitle">Its response for input sentence:</string>
    <string name="itsReponse">…waiting for server response…</string>
    <string name="itsReponseDefault">…Try a translation request first…</string>
    <string name="MsTitle">Microsoft Bing Translation response for input sentence:</string>
    <string name="MsReponse">…waiting for server response…</string>
    <string name="MsReponseDefault">…Try a translation request first…</string>
    <string name="responseEmpty">…Nothing to show…</string>
</resources>
